kubernetes/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jochemwhite-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jochemwhite-frontend
  template:
    metadata:
      labels:
        app: jochemwhite-frontend
    spec:
      containers:
      - name: jochemwhite-frontend
        image: ghcr.io/jochemwhite/jochemwhite:817e7de4cc9091b236a91fb2c6d9e7b2a620f7b5
        ports:
        - containerPort: 3000
        # envFrom:
        # - secretRef:
        #     name: jochemwhite-frontend
