kubernetes/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jochemwhite-nl-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: jochemwhite-frontend
